# apeETABS

./: .gitignore  HANDOFF.md  LICENSE  README.md  pyproject.toml
.claude/skills/etabs/: SKILL.md
.claude/skills/etabs-analysis/: SKILL.md
.claude/skills/etabs-design/: SKILL.md
.claude/skills/etabs-oapi/: SKILL.md
architecture/: 0009-build-plan.md  0009-interop-handoff.md  BUILD_PLAN.md
architecture/decisions/: 0001-user-facing-api-shape.md  0002-class-architecture.md  0003-results-extraction.md  0004-plotting.md  0005-model-editing.md  0006-model-creation.md  0007-agentic-workflow.md  0008-standard-presets.md  0009-apegmsh-export-meshing-pipeline.md
schema/: structural_model.schema.json
schema/examples/: two_story_frame.sm.json  wall_slab_frame.sm.json
scripts/: live_compare.py  live_export.py  live_smoke.py  live_validate.py
src/apeETABS/: __init__.py  _core.py  _session.py  criteria.py  crosscheck.py  enums.py  errors.py
src/apeETABS/agentic/: __init__.py  edit_spec.py  model_spec.py  outcomes.py  pipeline.py  policy.py  report_spec.py  spec.py
src/apeETABS/core/: Stories.py  Tables.py  Units.py  __init__.py
src/apeETABS/creation/: Create.py  Define.py  FrameHandle.py  New.py  __init__.py
src/apeETABS/editing/: Assign.py  (+3 more)
tests/: __init__.py  _mock_sapmodel.py  conftest.py  test_agentic.py  test_creation.py  test_crosscheck.py  test_editing.py  test_errors.py  test_export.py  test_geometry.py  test_irregularities.py  test_plotting.py  test_plotting_forces.py  test_results.py  test_standards.py  test_stories.py  test_tables.py  test_units.py
(+35 files in other folders)
